--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,30 +1,20 @@
 name: flutter_sample_riverpod_auto_route
 description: A new Flutter project.
-publish_to: 'none' 
-
+publish_to: 'none'
 version: 1.0.0+1
 
 environment:
   sdk: '>=3.0.6 <4.0.0'
 
 dependencies:
+  cupertino_icons: ^1.0.2
   flutter:
     sdk: flutter
-
-
-  cupertino_icons: ^1.0.2
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-
-  flutter_lints: ^2.0.0
-
+  pedantic_mono: ^1.23.0
 
 flutter:
-
   uses-material-design: true
-
-
-
-
