--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,14 +7,28 @@ environment:
   sdk: '>=3.0.6 <4.0.0'
 
 dependencies:
+  auto_route: ^7.8.1
+  collection: ^1.17.1
   cupertino_icons: ^1.0.2
   flutter:
     sdk: flutter
+  flutter_riverpod: ^2.4.0
+  gap: ^3.0.1
+  intl: ^0.18.1
+  json_annotation: ^4.8.1
+  json_serializable: ^6.7.1
+  riverpod_annotation: ^2.1.5
+  roggle: ^0.3.2
 
 dev_dependencies:
+  auto_route_generator: ^7.3.1
+  build_runner: ^2.4.6
   flutter_test:
     sdk: flutter
+  freezed: ^2.4.2
   pedantic_mono: ^1.23.0
+  riverpod_generator: ^2.3.2
+  riverpod_lint: ^2.1.0
 
 flutter:
   uses-material-design: true
