--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,6 +13,8 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_riverpod: ^2.4.0
+  flutter_web_plugins:
+    sdk: flutter
   gap: ^3.0.1
   intl: ^0.18.1
   json_annotation: ^4.8.1
