--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,6 +10,8 @@ dependencies:
   auto_route: ^7.8.1
   collection: ^1.17.1
   cupertino_icons: ^1.0.2
+  firebase_auth: ^4.10.0
+  firebase_auth_mocks: ^0.12.0
   flutter:
     sdk: flutter
   flutter_riverpod: ^2.4.0
