--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -8,7 +8,6 @@ environment:
 
 dependencies:
   auto_route: ^7.8.1
-  collection: ^1.17.1
   cupertino_icons: ^1.0.2
   firebase_auth: ^4.10.0
   firebase_auth_mocks: ^0.12.0
@@ -17,19 +16,15 @@ dependencies:
   flutter_riverpod: ^2.4.0
   flutter_web_plugins:
     sdk: flutter
-  gap: ^3.0.1
-  intl: ^0.18.1
-  json_annotation: ^4.8.1
-  json_serializable: ^6.7.1
   riverpod_annotation: ^2.1.5
   roggle: ^0.3.2
 
 dev_dependencies:
   auto_route_generator: ^7.3.1
   build_runner: ^2.4.6
+  custom_lint: ^0.5.3
   flutter_test:
     sdk: flutter
-  freezed: ^2.4.2
   pedantic_mono: ^1.23.0
   riverpod_generator: ^2.3.2
   riverpod_lint: ^2.1.0
